--- a/gallery.html
+++ b/gallery.html
@@ -23,17 +23,17 @@
     <h3></h3>
     <section id="gallery">
         <div class="gallery-grid">
-            <img src="images/g2.jpg" class="smaller-image">
-            <img src="images/g3.jpg" class="stacked-image">
-            <img src="images/g4.jpg" class="stacked-image">
-            <img src="images/g8.jpg" class="stacked-image">
-            <img src="images/g9.jpg" class="smaller-image">
-            <img src="images/g7.jpg" class="stacked-image">
-            <img src="images/g11.jpg" class="stacked-image">
-            <img src="images/g5.jpg" class="stacked-image">
-            <img src="images/g12.jpg" class="stacked-image">
-            <img src="images/g1.jpg" class="bottomrow-image">
-            <img src="images/g10.jpg" class="bottomrow-image">
+            <img src="./images/g2.jpg" class="smaller-image">
+            <img src="./images/g3.jpg" class="stacked-image">
+            <img src="./images/g4.jpg" class="stacked-image">
+            <img src="./images/g8.jpg" class="stacked-image">
+            <img src="./images/g9.jpg" class="smaller-image">
+            <img src="./images/g7.jpg" class="stacked-image">
+            <img src="./images/g11.jpg" class="stacked-image">
+            <img src="./images/g5.jpg" class="stacked-image">
+            <img src="./images/g12.jpg" class="stacked-image">
+            <img src="./images/g1.jpg" class="bottomrow-image">
+            <img src="./images/g10.jpg" class="bottomrow-image">
         </div>
     </section>
     
