--- a/gallery.html
+++ b/gallery.html
@@ -24,16 +24,16 @@
     <section id="gallery">
         <div class="gallery-grid">
             <img src="./images/g2.jpg" class="smaller-image">
-            <img src="./images/g3.jpg" class="stacked-image">
+            <img src="./images/g3.JPG" class="stacked-image">
             <img src="./images/g4.jpg" class="stacked-image">
-            <img src="./images/g8.jpg" class="stacked-image">
+            <img src="./images/g8.JPG" class="stacked-image">
             <img src="./images/g9.jpg" class="smaller-image">
             <img src="./images/g7.jpg" class="stacked-image">
             <img src="./images/g11.jpg" class="stacked-image">
-            <img src="./images/g5.jpg" class="stacked-image">
+            <img src="./images/g5.JPG" class="stacked-image">
             <img src="./images/g12.jpg" class="stacked-image">
             <img src="./images/g1.jpg" class="bottomrow-image">
-            <img src="./images/g10.jpg" class="bottomrow-image">
+            <img src="./images/g10.JPG" class="bottomrow-image">
         </div>
     </section>
     
