--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
             <img src="./images/g11.jpg" class="stacked-image">
             <img src="./images/g5.JPG" class="stacked-image">
             <img src="./images/g12.jpg" class="stacked-image">
-            <img src="./images/g1.jpg" class="bottomrow-image">
+            <img src="./images/g1.JPG" class="bottomrow-image">
             <img src="./images/g10.JPG" class="bottomrow-image">
         </div>
     </section>
