updated concert days

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <th>Venue</th>
             </tr>
             <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>October 17th, 2024</td>
+                <td>Littleton, Colorado</td>
+                <td>The Alley; 2420 Main St</td>
             </tr>
             <tr>
                 <td>TBD</td>
