--- a/gallery.html
+++ b/gallery.html
@@ -20,29 +20,30 @@
             </ul>
         </nav>
     </header>
-    <h3></h3>
+
     <section id="gallery">
+        <h2>Gallery</h2> 
         <div class="gallery-grid">
-            <img src="./images/g2.jpg" class="smaller-image">
-            <img src="./images/g3.JPG" class="stacked-image">
-            <img src="./images/g4.jpg" class="stacked-image">
-            <img src="./images/g8.JPG" class="stacked-image">
-            <img src="./images/g9.jpg" class="smaller-image">
-            <img src="./images/g7.jpg" class="stacked-image">
-            <img src="./images/g11.jpg" class="stacked-image">
-            <img src="./images/g5.JPG" class="stacked-image">
-            <img src="./images/g12.jpg" class="stacked-image">
-            <img src="./images/g1.JPG" class="bottomrow-image">
-            <img src="./images/g10.JPG" class="bottomrow-image">
+            <img src="./images/g2.jpg" class="smaller-image" alt="Band performing live">
+            <img src="./images/g3.JPG" class="stacked-image" alt="Behind the scenes of a recording session">
+            <img src="./images/g4.jpg" class="stacked-image" alt="Group photo of The Valleymen">
+            <img src="./images/g8.JPG" class="stacked-image" alt="Close-up of guitar performance">
+            <img src="./images/g9.jpg" class="smaller-image" alt="Fans enjoying a concert">
+            <img src="./images/g7.jpg" class="stacked-image" alt="Band members laughing together">
+            <img src="./images/g11.jpg" class="stacked-image" alt="On stage performance">
+            <img src="./images/g5.JPG" class="stacked-image" alt="Musician tuning an instrument">
+            <img src="./images/g12.jpg" class="stacked-image" alt="Band preparing for a show">
+            <img src="./images/g1.JPG" class="bottomrow-image" alt="Group shot after a concert">
+            <img src="./images/g10.JPG" class="bottomrow-image" alt="Band posing with fans">
         </div>
     </section>
     
     <footer>
         <p>&copy; 2024 The Valleymen. All rights reserved.</p>
         <div class="social-media">
-            <a href="https://www.tiktok.com/@thevalleymen_band"><img src="images/tiktok.png"></a>
-            <a href="https://x.com/TheValleymen"><img src="images/twitter.png"></a>
-            <a href="https://www.instagram.com/thevalleymen_band/"><img src="images/instagram.png"></a>
+            <a href="https://www.tiktok.com/@thevalleymen_band" alt="TikTok"><img src="images/tiktok.png"></a>
+            <a href="https://x.com/TheValleymen" alt="Twitter"><img src="images/twitter.png"></a>
+            <a href="https://www.instagram.com/thevalleymen_band/" alt="Instagram"><img src="images/instagram.png"></a>
         </div>
     </footer>
 </body>
