added globe hall announcement

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <section id="home">
 
         <div class="hero">
-            <h2>The Valleymen @ The Alley</h2>
-            <p>October 17th, 2024</p>
+            <h2>New Show Announcement!</h2>
+            <p>November 17th, 2024</p>
             <br>
-            <img src="images/thealley.jpg" alt="The Alley Flyer" class="cover-image">
+            <img src="images/globehall.png" alt="Globe Hall Flyer" class="cover-image">
         </div>
         <hr>
     </section>
@@ -39,18 +39,22 @@
                 <th>Date</th>
                 <th>City</th>
                 <th>Venue</th>
+                <th>Tickets</th>
             </tr>
             <tr>
-                <td>October 17th, 2024</td>
-                <td>Littleton, Colorado</td>
-                <td>The Alley; 2420 Main St</td>
+                <td>November 17th, 2024</td>
+                <td>Denver, Colorado</td>
+                <td>Globe Hall; 4483 Logan St 80216</td>
+                <td><a href="https://venmo.com/bennettminer">Venmo</a> $15 for 21+ $20 for under 21</td>
             </tr>
             <tr>
                 <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
+                <td>TBD</td>
             </tr>
             <tr>
+                <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
