added payment info

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <p>November 17th, 2024</p>
             <br>
             <img src="images/globehall.png" alt="Globe Hall Flyer" class="cover-image">
+            <p><a href="https://venmo.com/bennettminer">Venmo</a> $15 for 21+ $20 for under 21</a></p>
         </div>
         <hr>
     </section>
