--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         <div class="hero">
             <h2>New Show Announcement!</h2>
-            <p>November 17th, 2024</p>
+            <p>December 19th, 2024</p>
             <br>
-            <img src="images/globehall.png" alt="Globe Hall Flyer" class="cover-image">
-            <p><a href="https://venmo.com/bennettminer">Venmo</a> $15 for 21+ $20 for under 21</a></p>
+            <img src="images/100nickel.png" alt="Globe Hall Flyer" class="cover-image">
+            <p><a href="https://www.etix.com/ticket/p/85671941/the-valleymen-wthe-sweet-reliefs-and-nico-hussey-live-on-the-lanesat-100-nickel-broomfield-fort-collins-100-nickel">Tickets</a> $13.00 all ages</a></p>
         </div>
         <hr>
     </section>
@@ -43,10 +43,10 @@
                 <th>Tickets</th>
             </tr>
             <tr>
-                <td>November 17th, 2024</td>
-                <td>Denver, Colorado</td>
-                <td>Globe Hall; 4483 Logan St 80216</td>
-                <td><a href="https://venmo.com/bennettminer">Venmo</a> $15 for 21+ $20 for under 21</td>
+                <td>December 19th, 2024</td>
+                <td>Broomfield, Colorado</td>
+                <td>100 Nickel St, Broomfield, CO 80020</td>
+                <td><a href="https://www.etix.com/ticket/p/85671941/the-valleymen-wthe-sweet-reliefs-and-nico-hussey-live-on-the-lanesat-100-nickel-broomfield-fort-collins-100-nickel">Tickets</a> $13.00 all ages</td>
             </tr>
             <tr>
                 <td>TBD</td>
