--- a/about.html
+++ b/about.html
@@ -30,26 +30,26 @@
         <hr>
         <div class="members">
             <div class="member">
-                <img src="images/bryan.jpg" alt="Bryan Tadlock">
+                <img src="images/bryan2.jpg" alt="Bryan Tadlock">
                 <h3>Bryan Tadlock</h3>
                 <p>
                     Bryan has been singing since an early age, and his love for music has only deepened over time. Drawing inspiration from classic rock legends like Pink Floyd and modern indie artists such as Hippo Campus, Bryan's musical influences and experiences have shaped his journey with The Valleymen. His lyrical and compositional contributions play a key role in crafting the band's distinctive sound, helping to transform The Valleymen into the vibrant, electric four-piece band they are today.</p>
             </div>
             <hr>
             <div class="member">
-                <img src="images/bennett.jpg" alt="Bennett Miner">
+                <img src="images/bennett2.jpg" alt="Bennett Miner">
                 <h3>Bennett Miner</h3>
                 <p>Bennett is the lead guitarist and keyboard player for The Valleymen, has been playing guitar for two years and piano for three. Despite his relatively short time with these instruments, his serious passion for the art of music shines through in every performance. Bennett draws inspiration from a diverse range of artists, including Hippo Campus, Mac DeMarco, Tyler the Creator, Elton John, and Fleetwood Mac. His musical influences, combined with his dedication and creativity, have played a pivotal role in shaping The Valleymen's sound, adding depth and versatility to the band's lush, energetic performances.</p>
             </div>
             <hr>
             <div class="member">
-                <img src="images/maanasi.jpg" alt="Maanasi Gowda">
+                <img src="images/maanasi2.jpg" alt="Maanasi Gowda">
                 <h3>Maanasi Gowda</h3>
                 <p>Maanasi is a drummer and student University of Denver. With a deep love for rap and metal, she adores artists and bands akin to $uicideboy$, Bones, Havok, and Behemoth. Her drumming idols—Joey Jordison, Taylor Hawkins, and Austin Archey—fuel her passion and drive. Along with drums, Maanasi's talent extends to four other instruments, all of which see gives equal dedication. As a committed member of the Valleymen, she constantly pushes the boundaries of her musical abilities, sharing her love for music with others.</p>
             </div>
             <hr>
             <div class="member">
-                <img src="images/rider.jpg" alt="Rider Silvey">
+                <img src="images/rider2.jpg" alt="Rider Silvey">
                 <h3>Rider Silvey</h3>
                 <p>Rider is the Bassist, Guitarist, and Producer for The Valleymen. He has been invovled with music for many years, having played a multitude of genres, including Jazz, Grunge, and Rock. His influences include The Grateful Dead, The Beatles, Bob Dylan, and Goose. His influence is clear through his riff creation and improvisations. Along with music, he enjoys traveling to new places, expanding his pallete in a whole new way. He loves traveling to New York City, Las Vegas, and Nashville. His expansive musical interest influences the Valleymen sound in the best way possible, allowing the band to put forth their best work.</p>
             </div>
