--- a/gallery.html
+++ b/gallery.html
@@ -24,17 +24,17 @@
     <section id="gallery">
         <h2>Gallery</h2> 
         <div class="gallery-grid">
-            <img src="./images/g2.jpg" class="smaller-image" alt="Band performing live">
+            <img src="./images/g16.jpg" class="smaller-image" alt="Band performing live">
             <img src="./images/g3.JPG" class="stacked-image" alt="Behind the scenes of a recording session">
             <img src="./images/g4.jpg" class="stacked-image" alt="Group photo of The Valleymen">
             <img src="./images/g8.JPG" class="stacked-image" alt="Close-up of guitar performance">
-            <img src="./images/g9.jpg" class="smaller-image" alt="Fans enjoying a concert">
-            <img src="./images/g7.jpg" class="stacked-image" alt="Band members laughing together">
-            <img src="./images/g11.jpg" class="stacked-image" alt="On stage performance">
+            <img src="./images/g7.jpg" class="smaller-image" alt="Fans enjoying a concert">
+            <img src="./images/g14.jpg" class="stacked-image" alt="Band members laughing together">
+            <img src="./images/g18.jpg" class="smaller-image" alt="On stage performance">
             <img src="./images/g5.JPG" class="stacked-image" alt="Musician tuning an instrument">
-            <img src="./images/g12.jpg" class="stacked-image" alt="Band preparing for a show">
-            <img src="./images/g1.JPG" class="bottomrow-image" alt="Group shot after a concert">
-            <img src="./images/g10.JPG" class="bottomrow-image" alt="Band posing with fans">
+            <img src="./images/g17.jpg" class="smaller-image" alt="Band preparing for a show">
+            <img src="./images/g13.jpg" class="bottomrow-image" alt="Group shot after a concert">
+            <img src="./images/g15.jpg" class="bottomrow-image" alt="Band posing with fans">
         </div>
     </section>
     
