--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>March 9th, 2024</p>
             <br>
             <img src="images/larimer.png" alt="Larimer Lounge" class="cover-image">
-            <p><a href="https://www.etix.com/ticket/p/85671941/the-valleymen-wthe-sweet-reliefs-and-nico-hussey-live-on-the-lanesat-100-nickel-broomfield-fort-collins-100-nickel">Tickets</a> $15.00 21+ $20.00 21 under</a></p>
+            <p><a href="https://venmo.com/bennettminer">Tickets</a> $15.00 21+ $20.00 21 under</a></p>
         </div>
         <hr>
     </section>
